load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "components",
    srcs = glob(["**/*.rs"]),
    crate_features = select({
        "@platforms//cpu:wasm32": ["hydrate"],
        "//conditions:default": ["ssr"],
    }),
    visibility = ["//visibility:public"],
    deps = select({
        "@platforms//cpu:wasm32": [
            "//blade/darkmode",
            "//blade/shared",
            "//blade/state",
            "//blade/tailwindmerge",
            "//blade/trace_event_parser",
            "@wasm_crate//:ansi-to-html",
            "@wasm_crate//:anyhow",
            "@wasm_crate//:humantime",
            "@wasm_crate//:junit-parser",
            "@wasm_crate//:leptos",
            "@wasm_crate//:leptos_dom",
            "@wasm_crate//:leptos_router",
            "@wasm_crate//:serde",
            "@wasm_crate//:time",
            "@wasm_crate//:tracing",
            "@wasm_crate//:url",
            "@wasm_crate//:url-escape",
            "@wasm_crate//:wasm-bindgen",
            "@wasm_crate//:web-sys",
        ],
        "//conditions:default": [
            "//blade/darkmode",
            "//blade/shared",
            "//blade/state",
            "//blade/tailwindmerge",
            "//blade/trace_event_parser",
            "@crate//:ansi-to-html",
            "@crate//:anyhow",
            "@crate//:humantime",
            "@crate//:junit-parser",
            "@crate//:leptos",
            "@crate//:leptos_dom",
            "@crate//:leptos_router",
            "@crate//:serde",
            "@crate//:time",
            "@crate//:tracing",
            "@crate//:url",
            "@crate//:url-escape",
            "@crate//:wasm-bindgen",
            "@crate//:web-sys",
        ],
    }),
)
