load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "memdump",
    srcs = glob(["**/*.rs"]),
    visibility = ["//visibility:public"],
    deps = [
        "@crate//:anyhow",
        "@crate//:tikv-jemalloc-ctl",
        "@crate//:tikv-jemallocator",
        "@crate//:tokio",
        "@crate//:tempdir",
    ],
)
