load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "memdump",
    srcs = glob(["**/*.rs"]),
    visibility = ["//visibility:public"],
    deps = [
        "@crate//:anyhow",
        "@crate//:tempdir",
        "@crate//:tikv-jemalloc-ctl",
        "@crate//:tikv-jemallocator",
        "@crate//:tokio",
    ],
)

rust_test(
    name = "memdump_test",
    size = "small",
    crate = ":memdump",
)
