load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@rules_rust_prost//:defs.bzl", "rust_prost_library")

rust_library(
    name = "metrics",
    srcs = [
        "lib.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@crate//:anyhow",
        "@crate//:lazy_static",
        "@crate//:prometheus-client",
    ],
)

rust_test(
    name = "metrics_test",
    size = "small",
    crate = ":metrics",
)
