load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "routes",
    srcs = glob(["**/*.rs"]),
    compile_data = ["command.profile"],
    crate_features = select({
        "@platforms//cpu:wasm32": ["hydrate"],
        "//conditions:default": ["ssr"],
    }),
    rustc_env = {
        "SERVER_FN_OVERRIDE_KEY": "bazel",
    },
    visibility = ["//visibility:public"],
    deps = select({
        "@platforms//cpu:wasm32": [
            "//blade/components",
            "//blade/darkmode",
            "//blade/shared",
            "//blade/state",
            "//blade/tailwindmerge",
            "//blade/trace_event_parser",
            "@wasm_crate//:anyhow",
            "@wasm_crate//:futures",
            "@wasm_crate//:gloo-file",
            "@wasm_crate//:gloo-net",
            "@wasm_crate//:humantime",
            "@wasm_crate//:junit-parser",
            "@wasm_crate//:leptos",
            "@wasm_crate//:leptos_dom",
            "@wasm_crate//:leptos_meta",
            "@wasm_crate//:leptos_router",
            "@wasm_crate//:log",
            "@wasm_crate//:serde",
            "@wasm_crate//:time",
            "@wasm_crate//:tracing",
            "@wasm_crate//:url",
            "@wasm_crate//:url-escape",
            "@wasm_crate//:wasm-bindgen",
            "@wasm_crate//:web-sys",
            "@wasm_crate//:zip",
        ],
        "//conditions:default": [
            "//blade/bep",
            "//blade/bytestream",
            "//blade/components",
            "//blade/darkmode",
            "//blade/db",
            "//blade/shared",
            "//blade/state",
            "//blade/tailwindmerge",
            "//blade/trace_event_parser",
            "@crate//:anyhow",
            "@crate//:futures",
            "@crate//:humantime",
            "@crate//:junit-parser",
            "@crate//:leptos",
            "@crate//:leptos_dom",
            "@crate//:leptos_meta",
            "@crate//:leptos_router",
            "@crate//:log",
            "@crate//:serde",
            "@crate//:time",
            "@crate//:tokio",
            "@crate//:tokio-stream",
            "@crate//:tracing",
            "@crate//:url",
            "@crate//:url-escape",
            "@crate//:wasm-bindgen",
            "@crate//:web-sys",
            "@crate//:zip",
        ],
    }),
)
