load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "shared",
    srcs = [
        "lib.rs",
    ],
    crate_features = select({
        "@platforms//cpu:wasm32": ["hydrate"],
        "//conditions:default": ["ssr"],
    }),
    rustc_env = {
        "SERVER_FN_OVERRIDE_KEY": "bazel",
    },
    visibility = ["//visibility:public"],
    deps = select({
        "@platforms//cpu:wasm32": [
            "//blade/darkmode",
            "//blade/state",
            "@wasm_crate//:cfg-if",
            "@wasm_crate//:leptos",
            "@wasm_crate//:url",
            "@wasm_crate//:web-sys",
        ],
        "//conditions:default": [
            "//blade/bytestream",
            "//blade/darkmode",
            "//blade/state",
            "@crate//:cfg-if",
            "@crate//:leptos",
            "@crate//:url",
            "@crate//:web-sys",
        ],
    }),
)
