load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "state",
    srcs = [
        "lib.rs",
    ],
    crate_features = select({
        "@platforms//cpu:wasm32": [],
        "//conditions:default": ["ssr"],
    }),
    proc_macro_deps = select({
        "@platforms//cpu:wasm32": [],
        "//conditions:default": ["@crate//:derivative"],
    }),
    rustc_env = {
        "SERVER_FN_OVERRIDE_KEY": "bazel",
    },
    visibility = ["//visibility:public"],
    deps = select({
        "@platforms//cpu:wasm32": [
            "@wasm_crate//:cfg-if",
            "@wasm_crate//:futures",
            "@wasm_crate//:serde",
        ],
        "//conditions:default": [
            "//blade/bytestream",
            "@crate//:anyhow",
            "@crate//:cfg-if",
            "@crate//:futures",
            "@crate//:serde",
            "@crate//:tokio",
        ],
    }),
)
