load("@rules_rust_prost//:defs.bzl", "rust_prost_library")
load("//blade/bep/protos:descriptors.bzl", "transitive_proto_descriptors")

rust_prost_library(
    name = "empty_proto",
    proto = "@com_google_protobuf//:empty_proto",
    visibility = ["//visibility:public"],
)

rust_prost_library(
    name = "bep_proto",
    proto = "@googleapis//google/devtools/build/v1:build_proto",
    visibility = ["//visibility:public"],
)

transitive_proto_descriptors(
    name = "bep_descriptors",
    proto = ":build_event_stream_proto",
    visibility = ["//visibility:public"],
)

transitive_proto_descriptors(
    name = "bes_descriptors",
    proto = "@googleapis//google/devtools/build/v1:build_proto",
    visibility = ["//visibility:public"],
)

rust_prost_library(
    name = "build_event_stream_rust_proto",
    proto = ":build_event_stream_proto",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "action_cache_proto",
    srcs = ["action_cache.proto"],
)

proto_library(
    name = "build_event_stream_proto",
    srcs = ["build_event_stream.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":action_cache_proto",
        ":command_line_proto",
        ":failure_details_proto",
        ":invocation_policy_proto",
        ":package_load_metrics_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "command_line_proto",
    srcs = ["command_line.proto"],
    deps = [":option_filters_proto"],
)

proto_library(
    name = "failure_details_proto",
    srcs = ["failure_details.proto"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

proto_library(
    name = "invocation_policy_proto",
    srcs = ["invocation_policy.proto"],
)

proto_library(
    name = "option_filters_proto",
    srcs = ["option_filters.proto"],
)

proto_library(
    name = "package_load_metrics_proto",
    srcs = ["package_load_metrics.proto"],
    deps = ["@com_google_protobuf//:duration_proto"],
)
